# fgpt

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: cli.rs  fgpt.rs  main.rs  proxy.rs  rgpt.rs  role.code.prompt
