[package]
name = "rgpt"
version = "0.1.0"
edition = "2021"
description = "A free reverse proxy and CLI tool for OpenAI GPT-3.5-turbo."

[features]
default = ["cli", "proxy"]
cli = []
proxy = []

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = { version = "0.12.3", features = ["json", "stream"] }
futures = "0.3.30"
bytes = "1.6.0"
gpt_tokenizer = "0.1.0"
regex = "1.10.4"
