[package]
name = "fgpt"
version = "0.1.6"
edition = "2021"
description = "A free reverse proxy and cli tool for OpenAI GPT-3.5-turbo."
authors = ["jinti <shenjindi@fourz.cn>"]
homepage = "https://github.com/shenjinti/fgpt"
repository = "https://github.com/shenjinti/fgpt"
keywords = ["shell", "gpt", "chatgpt", "openai", "cli"]
license = "BSD-3-Clause"
readme = "README.md"

[features]
default = ["cli", "proxy"]
cli = []
proxy = []

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
    "socks",
] }
futures = "0.3.30"
bytes = "1.6.0"
gpt_tokenizer = "0.1.0"
regex = "1.10.4"
rustyline = { version = "14.0.0", features = ["derive"] }
rand = "0.8.5"
tokio-stream = "0.1.15"
rustls = "0.23.5"
base64 = "0.22.0"
hex = "0.4.3"
sha3 = "0.10.8"
